[package]
name = "stlrs"
version = "0.3.0"
description = "Seasonal-trend decomposition for Rust"
repository = "https://github.com/ankane/stl-rust"
license = "Unlicense OR MIT"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2021"
rust-version = "1.56.0"
readme = "README.md"

[lib]
doctest = false

[dependencies]
